<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonedasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15sp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convertidor"
            android:textSize="20sp"
            android:textColor="@color/negro"
            android:textAlignment="center"
            android:background="@color/azul">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCantidad"
            android:textSize="20sp"
            android:gravity="right"
            android:hint="Cantidad a convertir"
            android:inputType="numberDecimal"
            android:paddingBottom="10sp">

        </EditText>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnConversion"
            android:paddingBottom="10sp">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:textSize="20sp"
                android:id="@+id/btnCalcular">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:textSize="20sp"
                android:id="@+id/btnLimpiar">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:textSize="20sp"
                android:id="@+id/btnCerrar">
            </Button>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblResultado"
            android:text="@string/resultado"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/azul">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>