<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CotizacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Nombre del Cliente"
            android:textSize="20sp"
            android:textColor="@color/rojo"
            android:id="@+id/txtCliente"
            android:paddingBottom="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folio"
            android:id="@+id/txtFolio" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des"
            android:id="@+id/txtDescripcion"
            android:paddingBottom="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:textAlignment="textEnd"
            android:id="@+id/txtPrecio"
            android:paddingBottom="20sp"
            android:inputType="number" />

        <!-- Campo para el porcentaje de pago inicial -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Porcentaje de Pago Inicial"
            android:id="@+id/txtPorPagI"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:paddingBottom="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plazos"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:paddingBottom="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 Meses"
                android:id="@+id/rdb12"
                android:checked="true" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24 Meses"
                android:id="@+id/rdb24" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="36 Meses"
                android:id="@+id/rdb36" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="48 Meses"
                android:id="@+id/rdb48" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calcular"
                android:id="@+id/btnCalcular" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Limpiar"
                android:id="@+id/btnLimpiar" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cerrar"
                android:id="@+id/btnCerrar" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculos"
            android:textSize="20sp"
            android:textColor="@color/rojo"
            android:textAlignment="center"
            android:paddingTop="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinicial"
            android:id="@+id/txtPagoInicial"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfin"
            android:id="@+id/txtTotalFin"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmensual"
            android:id="@+id/txtPagoMensual"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>